Changelog
=========

What follows is a history of changes from release to release.  More detail
about the issues mentioned here can be found at the issue tracker, at::

    https://oodt.jpl.nasa.gov/jira/browse/CA

1.1.4 - TBD
-----------

This release:

* Leaves Collaborative Group objects as "private".
* Adds sharing permissions to Collaborative Groups.


1.1.3 - Smoother Edges
----------------------

This release includes:

* Table sorting enabled for all users, not just authenticated users
* Upgrades to the Publications tab with AJAX filtering


1.1.2 - Let's Collaborate!
--------------------------

This release includes:

* Collaborative groups, provided by the edrnsite.collaborations package.
* A default collaborative group container at /collaborative-groups.
* UI improvements to users & groups by enabling Plone's "many_users" and
  "many_groups" properties.
* Upgrade improvements.


1.1.1 - Upgrade Cleanup
-----------------------

This release includes the following:

* Cleaned up upgrade path for profile version 0-to-1 and 1-to-4.
* Removal of TTW customizations from operational database that are now
  captured in software.
* Removal of framework upgrade since that's out of this package's purview.


1.1.0 - Plone 4
---------------

This release makes edrnsite.policy compatible with Plone 4.


1.0.5 - NCI Hates Cookies
-------------------------

The following issues were addressed in this release:

* CA-743 - Disable Google Analytics
* CA-742 - Apply fix for CVE-2011-0720
* CA-597 - Add clock event to update sign-in secret


1.0.4 - The Googles, They Do Nothing
------------------------------------

The following issue was addressed in this release:

* CA-726 - Google verification now requires specific page content


1.0.3 - A Mixed Bag
-------------------

The following issues were addressed in this release:

* CA-681 - Fix the word staffers to say just staff
* CA-698 - "Structural" objects appear in searches


1.0.2 - Specimen Search
-----------------------